Fix #480: added missing border-radius and adapted margins

--- a/_sass/base/_typography.scss
+++ b/_sass/base/_typography.scss
@@ -189,7 +189,7 @@ code {
   border: solid 2px _palette(border-bg);
   font-family: _font(family-fixed);
   font-size: 0.9em;
-  margin: 0 0.25em;
+  margin: 0;
   padding: 0.25em 0.65em;
 }
 
